--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,8 @@
-#-----------------------------------
-# file:             .tmux.conf
-# author:           keks
-# last modified:    February 2011 
-#-----------------------------------
+#----------------------------------------------------
+# Author:       Max "keks" Fischer
+#
+# File:         .tmux.conf
+#----------------------------------------------------
 
 # command prefix (like screen)
 set -g prefix C-a
