--- a/.config/i3/config
+++ b/.config/i3/config
@@ -73,6 +73,21 @@ floating_modifier $mod
 
 font pango:DejaVu Sans Mono 8
 
+#
+# Windowing Rules
+#
+
+assign [class="Firefox"] → 1
+assign [class="pidgin"] → 2
+
+
+assign [instance="tmux"] → 2
+
+assign [instance="mpv"] → 9
+assign [instance="htop"] → 3
+
+# Start i3bar to display a workspace bar (plus the system information i3status
+# finds out, if available)
 bar {
 	status_command i3status --config ~/.config/i3/i3status.conf
 	}
