--- a/.config/i3/config
+++ b/.config/i3/config
@@ -77,14 +77,15 @@ font pango:DejaVu Sans Mono 8
 # Windowing Rules
 #
 
-assign [class="Firefox"] → 1
-assign [class="pidgin"] → 2
+assign [class="Firefox"] 1
+assign [class="Pentadactyl"] 1
+assign [class="pidgin"] 2
 
 
-assign [instance="tmux"] → 2
+assign [instance="tmux"] 2
 
-assign [instance="mpv"] → 9
-assign [instance="htop"] → 3
+assign [class="URxvt" instance="mpv"] 9
+assign [class="URxvt" instance="htop"] 3
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
