--- a/.config/i3/config
+++ b/.config/i3/config
@@ -80,7 +80,7 @@ font pango:DejaVu Sans Mono 8
 assign [class="Firefox"] 1
 assign [class="Pentadactyl"] 1
 assign [class="pidgin"] 2
-
+assign [class="Pidgin"] 2
 
 assign [instance="tmux"] 2
 
