--- a/.config/i3/config
+++ b/.config/i3/config
@@ -90,5 +90,6 @@ assign [class="URxvt" instance="htop"] 3
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
+    mode dock
 	status_command i3status --config ~/.config/i3/i3status.conf
 	}
