--- a/.config/i3/config
+++ b/.config/i3/config
@@ -87,6 +87,12 @@ assign [instance="tmux"] 2
 assign [class="URxvt" instance="mpv"] 9
 assign [class="URxvt" instance="htop"] 3
 
+for_window [title="QUAKE LIVE Launcher" class="Wine"] floating enable
+for_window [title="Quake Live" class="Wine"] floating enable
+
+for_window [title="QUAKE LIVE Launcher" class="PlayOnLinux"] floating enable
+for_window [title="Quake Live" class="PlayOnLinux"] floating enable
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
