modifications from work

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,8 +21,8 @@ bind + resize-pane -U 1
 bind . command-prompt
 bind a last-window
 bind space command-prompt -p index "select-window"
-bind C-j prev 
-bind C-k next
+bind C-h prev 
+bind C-l next
 
 # Keys w/o prefix key
 bind -n C-right next-window
@@ -51,8 +51,8 @@ bind-key C-y save-buffer /tmp/tmux-buffer \; run-shell "cat /tmp/tmux-buffer | x
 # Pre-Load
 new -n "zsh" 
 neww -n "htop" htop
-neww -n "fnode" irssi
-neww -n "qnet" irssi
+#neww -n "fnode" irssi
+#neww -n "qnet" irssi
 
 # window title
 set-option -g set-titles on
