--- a/.config/i3/config
+++ b/.config/i3/config
@@ -2,7 +2,7 @@ set $mod Mod4
 set $exec exec --no-startup-id
 
 bindsym $mod+Return $exec urxvt
-bindsym $mod+p $exec dmenu_run
+bindsym $mod+p $exec dmenu_run -fn 'iosevka heavy-11'
 
 bindsym $mod+BackSpace kill
 
@@ -70,7 +70,7 @@ bindsym $mod+b bar mode toggle
 
 floating_modifier $mod
 
-font pango:DejaVu Sans Mono 8
+font pango:iosevka heavy 10
 
 #
 # Windowing Rules
@@ -78,6 +78,7 @@ font pango:DejaVu Sans Mono 8
 
 assign [class="Firefox"] 1
 assign [class="Pentadactyl"] 1
+assign [class="Chromium"] 1
 assign [class="pidgin"] 9
 assign [class="Pidgin"] 9
 
@@ -91,6 +92,19 @@ for_window [title="Quake Live" class="Wine"] floating enable
 
 for_window [title="QUAKE LIVE Launcher" class="PlayOnLinux"] floating enable
 for_window [title="Quake Live" class="PlayOnLinux"] floating enable
+
+# from https://github.com/z3ntu/dotfiles/blob/master/i3/.config/i3/config
+# https://github.com/ValveSoftware/steam-for-linux/issues/1040
+for_window [class="^Steam$" title="^Friends$"] floating enable
+for_window [class="^Steam$" title="Steam - News"] floating enable
+for_window [class="^Steam$" title=".* - Chat"] floating enable
+for_window [class="^Steam$" title="^Settings$"] floating enable
+for_window [class="^Steam$" title=".* - event started"] floating enable
+for_window [class="^Steam$" title=".* CD key"] floating enable
+for_window [class="^Steam$" title="^Steam - Self Updater$"] floating enable
+for_window [class="^Steam$" title="^Screenshot Uploader$"] floating enable
+for_window [class="^Steam$" title="^Steam Guard - Computer Authorization Required$"] floating enable
+for_window [title="^Steam Keyboard$"] floating enable
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
