--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,19 +10,22 @@ unbind C-b
 bind C-a send-prefix
 
 # Keys
-bind k confirm kill-window
-bind K confirm kill-server
-bind % split-window -v
-bind : split-window -h
-bind < resize-pane -L 1
-bind > resize-pane -R 1
-bind - resize-pane -D 1
-bind + resize-pane -U 1
+bind j select-pane -D
+bind k select-pane -U
+bind h select-pane -L
+bind l select-pane -R
+
+bind | split-window -h
+bind - split-window -v
+
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r H resize-pane -L 5
+bind -r L resize-pane -R 5
+
 bind . command-prompt
 bind a last-window
 bind space command-prompt -p index "select-window"
-bind C-h prev 
-bind C-l next
 
 # Keys w/o prefix key
 bind -n C-right next-window
@@ -51,8 +54,8 @@ bind-key C-y save-buffer /tmp/tmux-buffer \; run-shell "cat /tmp/tmux-buffer | x
 # Pre-Load
 new -n "zsh" 
 neww -n "htop" htop
-#neww -n "fnode" irssi
-#neww -n "qnet" irssi
+neww -n "fnode" irssi
+neww -n "qnet" irssi
 
 # window title
 set-option -g set-titles on
@@ -69,6 +72,12 @@ set-window-option -g automatic-rename on # auto name
 set -g bell-action any 
 set -g visual-activity off
 set -g visual-bell off
+
+# panes
+
+set -g pane-border-fg white
+set -g pane-active-border-fg cyan
+set -g pane-active-border-bg cyan
 
 # statusbar --------------------------------------------------------------
 set -g status-bg black
