--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,3 +1,4 @@
+
 set $mod Mod4
 set $exec exec --no-startup-id
 
@@ -107,19 +108,54 @@ for_window [class="^Steam$" title="^Screenshot Uploader$"] floating enable
 for_window [class="^Steam$" title="^Steam Guard - Computer Authorization Required$"] floating enable
 for_window [title="^Steam Keyboard$"] floating enable
 
+## Base16 Solarized Dark
+# Author: Ethan Schoonover (http://ethanschoonover.com/solarized)
+#
+# You can use these variables anywhere in the i3 configuration file.
+
+set $base00 #002b36
+set $base01 #073642
+set $base02 #586e75
+set $base03 #657b83
+set $base04 #839496
+set $base05 #93a1a1
+set $base06 #eee8d5
+set $base07 #fdf6e3
+set $base08 #dc322f
+set $base09 #cb4b16
+set $base0A #b58900
+set $base0B #859900
+set $base0C #2aa198
+set $base0D #268bd2
+set $base0E #6c71c4
+set $base0F #d33682
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
+# Color configuration using the Base16 variables.
 bar {
-    colors {
-        background #000000
-        statusline #ffffff
-        separator #666666
-        # colorclass        <border>    <background> <text>
-        focused_workspace   #33aadd     #265e7a     #e3e3e3
-        active_workspace    #333333     #5f676a     #101010
-        inactive_workspace  #333333     #222222     #949494
-        urgent_workspace    #222222     #990000     #e3e3e3
-    }
     mode dock
-		status_command i3status --config ~/.config/i3/i3status.conf
-	}
+    status_command i3status --config ~/.config/i3/i3status.conf
+
+    colors {
+        background $base00
+        separator  $base01
+        statusline $base04
+
+        # State             Border  BG      Text
+        focused_workspace   $base05 $base0D $base00
+        active_workspace    $base05 $base03 $base00
+        inactive_workspace  $base03 $base01 $base05
+        urgent_workspace    $base08 $base08 $base00
+        binding_mode        $base00 $base0A $base00
+    }
+}
+
+# Basic color configuration using the Base16 variables for windows and borders.
+# Property Name         Border  BG      Text    Indicator Child Border
+client.focused          $base05 $base0D $base00 $base0D $base0D
+client.focused_inactive $base01 $base01 $base05 $base03 $base01
+client.unfocused        $base01 $base00 $base05 $base01 $base01
+client.urgent           $base08 $base08 $base00 $base08 $base08
+client.placeholder      $base00 $base00 $base05 $base00 $base00
+client.background       $base07
