--- a/.tmux.conf
+++ b/.tmux.conf
@@ -79,7 +79,7 @@ set -g pane-active-border-fg cyan
 set -g pane-active-border-bg cyan
 
 # statusbar --------------------------------------------------------------
-set -g status-bg black
+set -g status-bg colour235
 set -g status-fg white
 
 setw -g window-status-format " #F#I:#W#F "
