Add useful IDE action shortcuts

--- a/.ideavimrc
+++ b/.ideavimrc
@@ -1,17 +1,16 @@
+let mapleader = ','
+
 set hlsearch
 set scrolloff=3
 set ignorecase smartcase
 set showmode
 set history=1000
 
-" Configure leader
-let mapleader = ','
-
 " easy system clipboard copy/paste
-noremap <leader>y "*y
-noremap <leader>Y "*Y
-noremap <leader>p "*p
-noremap <leader>P "*P
+noremap <space>y "*y
+noremap <space>Y "*Y
+noremap <space>p "*p
+noremap <space>P "*P
 
 " easy window navigation
 nnoremap <c-l> <c-w>l
@@ -24,7 +23,34 @@ nnoremap <c-s-tab> gT
 nnoremap <c-tab> gt
 
 " code refactoring
-nnoremap <leader>rr :action RenameElement<cr>
+nnoremap <leader>ff :action FindInPath<cr>
+nnoremap <leader>fu :action FindUsages<cr>
+nnoremap <leader>su :action ShowUsages<cr>
+nnoremap <leader>cv :action ChangeView<cr>
+nnoremap <leader>bb :action ToggleLineBreakpoint<cr>
+nnoremap <leader>br :action ViewBreakpoints<cr>
+nnoremap <leader>ic :action InspectCode<cr>
+nnoremap <leader>oi :action OptimizeImports<cr>
+nnoremap <leader>re :action RenameElement<cr>
+nnoremap <leader>rf :action RenameFile<cr>
+nnoremap <leader>gq :action ReformatCode<cr>
+nnoremap <leader>mv :action ActivateMavenProjectsToolWindow<cr>
+nnoremap <leader>dd :action Debug<cr>
+nnoremap <leader>dc :action ChooseDebugConfiguration<cr>
+nnoremap <leader>rr :action Run<cr>
+nnoremap <leader>rc :action ChooseRunConfiguration<cr>
+nnoremap <leader>q  :action CloseActiveTab<cr>
+nnoremap <leader>ga :action GotoAction<cr>
+nnoremap <leader>gi :action GotoImplementation<cr>
+nnoremap <leader>gs :action GotoSuperMethod<cr>
+nnoremap <leader>gd :action GotoDeclaration<cr>
+nnoremap <leader>gt :action GotoTest<cr>
+nnoremap <leader>gr :action GotoRelated<cr>
+nnoremap <leader>gb :action Annotate<cr>
+nnoremap <leader>tl Vy<cr>:action ActivateTerminalToolWindow<cr>
+vnoremap <leader>tl y<cr>:action ActivateTerminalToolWindow<cr>
+nnoremap ]e :action GotoNextError<cr>
+nnoremap [e :action GotoPreviousError<cr>
 
 " space bar un-highligts search
 nnoremap <silent> <Space> :silent noh<Bar>echo<CR>
