--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,4 @@
 #----------------------------------------------------
-# Author:       Max "keks" Fischer
-#
 # File:         .tmux.conf
 #----------------------------------------------------
 
@@ -9,14 +7,14 @@ set -g prefix C-a
 unbind C-b
 bind C-a send-prefix
 
-# Keys
+## Keys
 bind j select-pane -D
 bind k select-pane -U
 bind h select-pane -L
 bind l select-pane -R
 
-bind | split-window -h
-bind - split-window -v
+bind v split-window -h
+bind s split-window -v
 
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
@@ -27,25 +25,45 @@ bind . command-prompt
 bind a last-window
 bind space command-prompt -p index "select-window"
 
-# Keys w/o prefix key
-bind -n C-right next-window
-bind -n C-left previous-window
-
-# cycling in split
-set-option -g mouse-select-pane off
-
-# basic settings
-set-window-option -g mode-keys vi # vi key
-set-option -g status-keys vi
-set-window-option -g utf8 on # utf8 support
-set-window-option -g mode-mouse off # disable mouse
-set -g default-terminal "screen-256color"
-set -g base-index 1
-set-option -g status-utf8 on
-
 # copy mode to escape key
 unbind [
 bind Escape copy-mode
+
+# Keys w/o prefix key
+bind -n C-right next-window
+bind -n C-left previous-window
+# Use Alt-vim keys without prefix key to switch panes
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D 
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+
+# Use Alt-arrow keys without prefix key to switch panes
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+# Shift arrow to switch windows
+bind -n S-Left  previous-window
+bind -n S-Right next-window
+
+# No delay for escape key press
+set -sg escape-time 0
+
+
+## Basic Settings
+# 0 is too far from ` ;)
+set -g base-index 1
+set -g default-terminal "screen-256color"
+set-option -g status-keys vi
+set -g history-limit 10000
+set-option -g status-utf8 on
+
+set-window-option -g mode-keys vi # vi key
+set-window-option -g monitor-activity on
+set-window-option -g utf8 on # utf8 support
+set-window-option -g mode-mouse off # disable mouse
 
 # move tmux copy buffer into x clipboard
 bind-key C-y save-buffer /tmp/tmux-buffer \; run-shell "cat /tmp/tmux-buffer | xclip"
@@ -53,9 +71,8 @@ bind-key C-y save-buffer /tmp/tmux-buffer \; run-shell "cat /tmp/tmux-buffer | x
 # Pre-Load
 new -n "zsh" 
 neww -n "htop" htop
-neww -n "fnode" irssi
-neww -n "qnet" irssi
 
+## Visual
 # window title
 set-option -g set-titles on
 set-option -g set-titles-string '#S:#I.#P #W' # window number,program name,active (or not)
