switch to dracula theme and use AceJump for intellij

--- a/.ideavimrc
+++ b/.ideavimrc
@@ -54,3 +54,11 @@ nnoremap [e :action GotoPreviousError<cr>
 
 " space bar un-highligts search
 nnoremap <silent> <Space> :silent noh<Bar>echo<CR>
+
+" AceJump (https://github.com/acejump/AceJump)
+" Press `f` to activate AceJump
+map f :action AceAction<CR>
+" Press `F` to activate Target Mode
+map F :action AceTargetAction<CR>
+" Press `g` to activate Line Mode
+map g :action AceLineAction<CR>
