--- a/.config/i3/config
+++ b/.config/i3/config
@@ -2,7 +2,7 @@
 set $mod Mod4
 set $exec exec --no-startup-id
 
-bindsym $mod+Return $exec urxvt
+bindsym $mod+Return $exec termite
 bindsym $mod+p exec dmenu_run -i -l 10 -p "$" -fn "iosevka medium-12" -nb "#080808" -nf "#808080" -sb "#080808" -sf "#ea8484"
 # bindsym $mod+p exec dmenu_run -i -l 10 -h 18 -p "$" -fn "-*-terminus-medium-*-*-*-12-*-*-*-*-*-*-*" -x 690 -w 300 -nb "#080808" -nf "#808080" -sb "#080808" -sf "#ea8484"
 
@@ -65,7 +65,7 @@ bindsym $mod+Shift+r restart
 bindsym $mod+Pause $exec i3lock -c 232323
 
 bindsym $mod+m $exec i3-input -F 'mark %s' -l 1 -P 'mark'
-bindsym $mod+apostrophe $exec i3-input -F '[con_mark="%s"] focus' -l 1 -P 'goto'
+bindsym $mod+grave $exec i3-input -F '[con_mark="%s"] focus' -l 1 -P 'goto'
 
 bindsym $mod+Escape move scratchpad
 bindsym $mod+space scratchpad show
@@ -80,6 +80,16 @@ font pango:iosevka medium 11
 #
 # Windowing Rules
 #
+workspace 1 output DP-1
+workspace 2 output DP-1
+workspace 3 output DP-1
+workspace 4 output DVI-D-1
+workspace 5 output DP-1
+workspace 6 output DP-1
+workspace 7 output DP-1
+workspace 8 output DP-1
+workspace 9 output DP-1
+workspace 10 output DP-1
 
 assign [class="Firefox"] 1
 assign [class="Chromium"] 1
@@ -116,7 +126,10 @@ for_window [title="^Steam Keyboard$"] floating enable
 # Color configuration using the Base16 variables.
 bar {
     mode dock
+	position top
+	tray_output DVI-D-1
     status_command i3status --config ~/.config/i3/i3status.conf
+
 
 	colors {
 		background #080808
