--- a/.config/i3/config
+++ b/.config/i3/config
@@ -3,8 +3,21 @@ set $mod Mod4
 set $exec exec --no-startup-id
 
 bindsym $mod+Return $exec termite
-bindsym $mod+p exec dmenu_run -i -l 10 -p "$" -fn "iosevka medium-12" -nb "#080808" -nf "#808080" -sb "#080808" -sf "#ea8484"
-# bindsym $mod+p exec dmenu_run -i -l 10 -h 18 -p "$" -fn "-*-terminus-medium-*-*-*-12-*-*-*-*-*-*-*" -x 690 -w 300 -nb "#080808" -nf "#808080" -sb "#080808" -sf "#ea8484"
+
+#bindsym $mod+p exec dmenu_run -i -l 10 -p "$" -fn "xos4-terminus-medium-r-*-*-14-*" -nb "#080808" -nf "#808080" -sb "#080808" -sf "#ea8484"
+#bindsym $mod+p exec dmenu_run -i -l 10 -p "$" -fn "DejaVu Sans Mono-12" -nb "#080808" -nf "#808080" -sb "#080808" -sf "#ea8484"
+#bindsym $mod+p exec dmenu_run -i -l 10 -h 18 -p "$" -fn "-*-terminus-medium-*-*-*-12-*-*-*-*-*-*-*" -x 690 -w 300 -nb "#080808" -nf "#808080" -sb "#080808" -sf "#ea8484"
+
+bindsym $mod+Shift+p exec clipmenu -i -l 10 -p "$" -fn "Iosevka Medium-13" -nb "#222" -nf "#808080" -sb "#222" -sf "#ea8484"
+bindsym $mod+p exec --no-startup-id keepmenu
+bindsym $mod+space exec --no-startup-id "rofi -show combi -switchers combi -combi-modi 'window,run'"
+bindsym $mod+Shift+f exec wmfocus
+bindsym $mod+Shift+e exec --no-startup-id "rofi -show emoji -modi emoji"
+
+bindsym $mod+Ctrl+Shift+l exec --no-startup-id i3lock -k --ignore-empty-password -f -c 444444 --insidever-color=6666FFAA --insidewrong-color=FF333322 --inside-color=333333EE --time-pos="ix:iy + 300" --time-color=FFFFFFDD --time-font="Iosevka Extended" --time-size=40 --date-str="%F" --date-color=FFFFFFAA --date-font="Iosevka Extended" --date-size=25 --redraw-thread
+
+bindsym $mod+d exec --no-startup-id termite -t 'fzf-menu' -e 'i3-dmenu-desktop --dmenu=fzf'
+for_window [title="fzf-menu"] floating enable
 
 bindsym Mod1+Tab $exec rofi -show window
 
@@ -34,6 +47,31 @@ bindsym $mod+Shift+space floating toggle
 bindsym $mod+a focus parent
 bindsym $mod+c focus child
 
+# Put specific workspace to small laptop screen
+#workspace 1 output DP-2-2
+#workspace 2 output eDP-1
+#workspace 3 output DP-2-3
+#workspace 4 output DP-2-2
+#workspace 5 output DP-2-2
+#workspace 6 output DP-2-2
+#workspace 7 output DP-2-2
+#workspace 8 output DP-2-2
+#workspace 9 output DP-2-2
+#workspace 10 output eDP-1
+
+#workspace 1 output HDMI-2
+workspace 1 output DP-1
+workspace 2 output HDMI-2
+workspace 3 output HDMI-2
+workspace 4 output HDMI-2
+workspace 5 output HDMI-2
+workspace 6 output HDMI-2
+workspace 7 output HDMI-2
+workspace 8 output HDMI-2
+workspace 9 output HDMI-2
+workspace 10 output eDP-1
+
+
 bindsym $mod+1 workspace 1
 bindsym $mod+2 workspace 2
 bindsym $mod+3 workspace 3
@@ -62,45 +100,55 @@ bindsym $mod+Shift+Tab move container to workspace back_and_forth
 bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
 
-bindsym $mod+Pause $exec i3lock -c 232323
-
 bindsym $mod+m $exec i3-input -F 'mark %s' -l 1 -P 'mark'
 bindsym $mod+grave $exec i3-input -F '[con_mark="%s"] focus' -l 1 -P 'goto'
 
-bindsym $mod+Escape move scratchpad
-bindsym $mod+space scratchpad show
+#bindsym $mod+Escape move scratchpad
+#bindsym $mod+space scratchpad show
 
 bindsym $mod+b bar mode toggle
 
-# Audio controls
-bindsym $mod+equal exec --no-startup-id amixer sset Master 5%+ # increase sound volume
-bindsym $mod+minus exec --no-startup-id amixer sset Master 5%- # decrease sound volume
-bindsym $mod+F12 exec --no-startup-id amixer set Master 1+ toggle # toggle mute sound
+# Pulse Audio controls
+#bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 1 +5% #increase sound volume
+#bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 1 -5% #decrease sound volume
+#bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 1 toggle # mute sound
+# No multimedia keys anymore
+bindsym $mod+Shift+F10 exec "ponymix toggle"
+bindsym $mod+Shift+F11 exec "ponymix decrease 10"
+bindsym $mod+Shift+F12 exec "ponymix increase 10"
+
+# Screen brightness controls
+bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
+bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightness
+
+# Touchpad controls
+#bindsym XF86TouchpadToggle exec $HOME/bin/toggletouchpad.sh # toggle touchpad
+
+# Media player controls
+bindsym XF86AudioPlay exec playerctl play
+bindsym XF86AudioPause exec playerctl pause
+bindsym XF86AudioNext exec playerctl next
+bindsym XF86AudioPrev exec playerctl previous
+
 
 floating_modifier $mod
 
-font pango:iosevka medium 11
-#font -*-terminus-medium-*-*-*-14-*-*-*-*-*-*-*
+font pango: Terminus
 
 #
 # Windowing Rules
 #
-workspace 1 output DP-1
-workspace 2 output DVI-D-1
-workspace 3 output DP-1
-workspace 4 output DP-1
-workspace 5 output DP-1
-workspace 6 output DP-1
-workspace 7 output DP-1
-workspace 8 output DP-1
-workspace 9 output DP-1
-workspace 10 output DP-1
 
-assign [class="Firefox"] 1
-assign [class="Chromium"] 1
-assign [class="pidgin"] 9
-assign [class="Pidgin"] 9
-assign [class="Signal"] 10
+#assign [class="firefox"] 1
+#assign [class="Chromium"] 1
+assign [class="GitKraken"] 2
+assign [class="KeePassXC"] 3
+assign [class="jetbrains-idea"] 4
+assign [class="Skype"] 10
+assign [class="Slack"] 10
+assign [class="teams-for-linux"] 10
+assign [class="microsoft teams - preview"] 10
+assign [class="Microsoft Teams - Preview"] 10
 
 assign [instance="tmux"] 2
 
@@ -126,29 +174,36 @@ for_window [class="^Steam$" title="^Screenshot Uploader$"] floating enable
 for_window [class="^Steam$" title="^Steam Guard - Computer Authorization Required$"] floating enable
 for_window [title="^Steam Keyboard$"] floating enable
 
+# MS teams notifications
+for_window [title=".*Microsoft.*Teams.*Notification.*"] floating enable
+
+# browser pop-ups
+for_window [window_role="pop-up"] floating enable
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 # Color configuration using the Base16 variables.
-bar {
-    font pango:Iosevka Medium, FontAwesome 11
-    mode dock
-	position top
-	tray_output DVI-D-1
-    #status_command i3status --config ~/.config/i3/i3status.conf
-    status_command i3blocks -c ~/.config/i3blocks/config
+#bar {
+#    font pango:Terminus,FontAwesome 10.5
+#    tray_output primary
+#    position top
+#    mode dock
+#    #status_command i3status --config ~/.config/i3/i3status.conf
+#    status_command i3blocks
+#
+#	colors {
+#		background #080808
+#		statusline #808080
+#		separator #404040
+#		#                  border  backgr  text
+#		focused_workspace  #a6a6de #080808 #ffffff
+#		active_workspace   #404040 #080808 #a6a6de
+#		inactive_workspace #404040 #080808 #808080
+#		urgent_workspace   #ea8484 #080808 #ffffff
+#	}
+#}
 
-
-	colors {
-		background #080808
-		statusline #808080
-		separator #404040
-		#                  border  backgr  text
-		focused_workspace  #a6a6de #080808 #ffffff
-		active_workspace   #404040 #080808 #a6a6de
-		inactive_workspace #404040 #080808 #808080
-		urgent_workspace   #ea8484 #080808 #ffffff
-	}
-}
+exec_always --no-startup-id $HOME/.config/polybar/launch-polybar.sh
 
 # class                 border  backgr  text    indicator
 client.focused          #a6a6de #a6a6de #000000 #a6a6de
