--- a/.config/i3/config
+++ b/.config/i3/config
@@ -2,7 +2,7 @@
 set $mod Mod4
 set $exec exec --no-startup-id
 
-bindsym $mod+Return $exec termite
+bindsym $mod+Return $exec alacritty
 
 #bindsym $mod+p exec dmenu_run -i -l 10 -p "$" -fn "xos4-terminus-medium-r-*-*-14-*" -nb "#080808" -nf "#808080" -sb "#080808" -sf "#ea8484"
 #bindsym $mod+p exec dmenu_run -i -l 10 -p "$" -fn "DejaVu Sans Mono-12" -nb "#080808" -nf "#808080" -sb "#080808" -sf "#ea8484"
@@ -16,7 +16,7 @@ bindsym $mod+Shift+e exec --no-startup-id "rofi -show emoji -modi emoji"
 
 bindsym $mod+Ctrl+Shift+l exec --no-startup-id i3lock -k --ignore-empty-password -f -c 444444 --insidever-color=6666FFAA --insidewrong-color=FF333322 --inside-color=333333EE --time-pos="ix:iy + 300" --time-color=FFFFFFDD --time-font="Iosevka Extended" --time-size=40 --date-str="%F" --date-color=FFFFFFAA --date-font="Iosevka Extended" --date-size=25 --redraw-thread
 
-bindsym $mod+d exec --no-startup-id termite -t 'fzf-menu' -e 'i3-dmenu-desktop --dmenu=fzf'
+bindsym $mod+d exec --no-startup-id alacritty -t 'fzf-menu' -e 'i3-dmenu-desktop --dmenu=fzf'
 for_window [title="fzf-menu"] floating enable
 
 bindsym Mod1+Tab $exec rofi -show window
@@ -59,7 +59,7 @@ bindsym $mod+c focus child
 #workspace 9 output DP-2-2
 #workspace 10 output eDP-1
 
-#workspace 1 output HDMI-2
+# At home
 workspace 1 output DP-1
 workspace 2 output HDMI-2
 workspace 3 output HDMI-2
@@ -71,6 +71,17 @@ workspace 8 output HDMI-2
 workspace 9 output HDMI-2
 workspace 10 output eDP-1
 
+# At office
+#workspace 1 output eDP-1
+#workspace 2 output DP-2-2
+#workspace 3 output DP-2-3
+#workspace 4 output DP-2-2
+#workspace 5 output DP-2-2
+#workspace 6 output DP-2-2
+#workspace 7 output DP-2-2
+#workspace 8 output DP-2-2
+#workspace 9 output DP-2-2
+#workspace 10 output DP-2-2
 
 bindsym $mod+1 workspace 1
 bindsym $mod+2 workspace 2
@@ -203,7 +214,26 @@ for_window [window_role="pop-up"] floating enable
 #	}
 #}
 
-exec_always --no-startup-id $HOME/.config/polybar/launch-polybar.sh
+# polybar
+#exec_always --no-startup-id $HOME/.config/polybar/launch-polybar.sh
+
+# i3status-rs
+bar {
+    font pango:Terminus, FontAwesome 12
+    position bottom
+    tray_output primary
+    status_command i3status-rs
+    colors {
+        separator #404040
+        background #080808
+        statusline #808080
+        #                  border  backgr  text
+        focused_workspace  #a6a6de #080808 #ffffff
+        active_workspace   #404040 #080808 #a6a6de
+        inactive_workspace #404040 #080808 #808080
+        urgent_workspace   #ea8484 #080808 #ffffff
+    }
+}
 
 # class                 border  backgr  text    indicator
 client.focused          #a6a6de #a6a6de #000000 #a6a6de
