Edit polybar config - use nerd font icons, remove underlines

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -16,7 +16,7 @@ height = 27
 bottom = true
 ;offset-x = 1%
 ;offset-y = 1%
-radius = 0
+radius = 6.0
 fixed-center = false
 
 background = ${colors.background}
@@ -34,17 +34,24 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 2
 
-font-0 = Terminus:size=14:weight=regular;0
-font-1 = Terminus:size=14:weight=bold;0
-font-2 = Material Icons:size=11:0
-font-3 = Symbola:size=11:0
+font-0 = "Iosevka:style=Normal:size=11;2"
+font-1 = "Iosevka:style=Heavy:size=11;2"
+font-2 = "Iosevka Nerd Font:style=Medium:size=14;2"
+
+#font-2 = "Iosevka Nerd Font:style=Medium:size=12;0"
+
+
+#font-1 = Terminus:size=14:weight=bold;0
+#font-2 = Material Icons:size=11:0
+#font-3 = Symbola:size=11:0
 
 modules-left = i3
 modules-right = filesystem vpn-openvpn-isrunning eth temperature cpu memory pulseaudio date
 
-tray-position = ${env:TRAY_POS}
+tray-position = ${env:TRAY_POS:}
 ;tray-position = right
 tray-padding = 2
+tray-offset-x = 0
 ;tray-transparent = true
 ;tray-background = #0063ff
 
@@ -64,8 +71,11 @@ interval = 25
 
 mount-0 = /
 
-label-mounted = %{F#0a81f5}%mountpoint%%{F-}: %used%/%total%
-label-mounted-underline = #7cb9e8
+format-prefix = "󰋊  "
+format-prefix-foreground = ${colors.foreground-alt}
+format-mounted = <label-mounted>
+#label-mounted = %{F#0a81f5}%mountpoint%%{F-}: %used%/%total%
+label-mounted = %{F#555}󰋊 %{F-} %used%/%total%
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.foreground-alt}
 
@@ -79,23 +89,24 @@ wrapping-scroll = false
 pin-workspaces = true
 
 label-mode-padding = 2
-label-mode-foreground = #000
+label-mode-foreground = ${colors.primary}
 label-mode-background = ${colors.primary}
 
 ; focused = Active workspace on focused monitor
-label-focused = %index%
-label-focused-background = ${colors.background-alt}
-label-focused-underline = ${colors.primary}
+label-focused = %{T2}%index%%{T-}
+label-focused-foreground = ${colors.background-alt}
+label-focused-background = ${colors.primary}
 label-focused-padding = 2
 
 ; unfocused = Inactive workspace on any monitor
 label-unfocused = %index%
 label-unfocused-padding = 2
+label-unfocused-foreground = ${colors.foreground}
 
 ; visible = Active workspace on unfocused monitor
-label-visible = %index%
-label-visible-background = ${self.label-focused-background}
-label-visible-underline = ${self.label-focused-underline}
+label-visible = %{T2}%index%%{T-}
+label-visible-foreground = ${colors.foreground}
+label-visible-background = ${colors.foreground-alt}
 label-visible-padding = ${self.label-focused-padding}
 
 ; urgent = Workspace with urgency hint set
@@ -110,10 +121,8 @@ label-urgent-padding = 2
 type = internal/cpu
 interval = 2
 format = <ramp-load>
-format-underline = #6d24ff
-format-prefix = "CPU "
+format-prefix = "󰊚  "
 format-prefix-foreground = ${colors.foreground-alt}
-format-prefix-underline = #6d24ff
 label = %percentage:2%%
 ramp-load-0 = ▁
 ramp-load-1 = ▂
@@ -128,9 +137,8 @@ ramp-load-7 = █
 type = internal/memory
 interval = 5
 format = <ramp-used>
-format-prefix = "Mem "
+format-prefix = "󰍛  "
 format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #4bffdc
 
 ramp-used-0 = ▁
 ramp-used-1 = ▂
@@ -147,8 +155,7 @@ interface = enp4s0
 interval = 5
 
 format-connected = <label-connected>
-format-connected-underline = #55aa55
-format-connected-prefix = "Eth "
+format-connected-prefix = "󰌘  "
 format-connected-prefix-foreground = ${colors.foreground-alt}
 label-connected = %local_ip% (↓ %downspeed% | ↑ %upspeed% | %linkspeed%)
 
@@ -168,9 +175,8 @@ date-alt = " %Y-%m-%d"
 time = %H:%M
 time-alt = %H:%M:%S
 
-format-prefix = 
+format-prefix = "󰥔 "
 format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #0a6cf5
 
 label = %date% %{T2}%time%%{T-}
 
@@ -178,10 +184,11 @@ label = %date% %{T2}%time%%{T-}
 type = internal/pulseaudio
 
 format-volume = <label-volume> <bar-volume>
-label-volume = Vol %percentage%%
+label-volume = %{F#555} %{F-} %percentage%%
+
 label-volume-foreground = ${root.foreground}
 
-label-muted =  muted
+label-muted = 
 label-muted-foreground = #666
 
 bar-volume-width = 10
@@ -211,10 +218,10 @@ hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon2/temp1_input
 format = <label>
 format-prefix = "Temp "
 format-prefix-foreground = ${colors.foreground-alt}
-format-prefix-underline = ${colors.secondary}
-format-underline = #f50a4d
+#format-prefix-underline = ${colors.secondary}
+#format-underline = #f50a4d
 format-warn = <label-warn>
-format-warn-underline = ${self.format-underline}
+#format-warn-underline = ${self.format-underline}
 
 label = %temperature-c%
 label-warn = %temperature-c%
@@ -222,10 +229,8 @@ label-warn-foreground = ${colors.secondary}
 
 [module/vpn-openvpn-isrunning]
 type = custom/script
-format-prefix = "VPN "
+format-prefix = "  "
 format-prefix-foreground = ${colors.foreground-alt}
-format-prefix-underline = ${colors.secondary}
-format-underline = #f50a4d
 
 exec = /home/keks/.config/polybar/vpn-openvpn-isrunning.sh
 interval = 5
