--- a/.config/i3/config
+++ b/.config/i3/config
@@ -2,7 +2,7 @@
 set $mod Mod4
 set $exec exec --no-startup-id
 
-bindsym $mod+Return $exec alacritty
+bindsym $mod+Return $exec wezterm
 
 #bindsym $mod+p exec dmenu_run -i -l 10 -p "$" -fn "xos4-terminus-medium-r-*-*-14-*" -nb "#080808" -nf "#808080" -sb "#080808" -sf "#ea8484"
 #bindsym $mod+p exec dmenu_run -i -l 10 -p "$" -fn "DejaVu Sans Mono-12" -nb "#080808" -nf "#808080" -sb "#080808" -sf "#ea8484"
@@ -14,7 +14,7 @@ bindsym $mod+space exec --no-startup-id "rofi -show combi -switchers combi -comb
 bindsym $mod+Shift+f exec wmfocus
 bindsym $mod+Shift+e exec --no-startup-id "rofi -show emoji -modi emoji"
 
-bindsym $mod+Ctrl+Shift+l exec --no-startup-id i3lock -k --ignore-empty-password -f -c 444444 --insidever-color=6666FFAA --insidewrong-color=FF333322 --inside-color=333333EE --time-pos="ix:iy + 300" --time-color=FFFFFFDD --time-font="Iosevka Extended" --time-size=40 --date-str="%F" --date-color=FFFFFFAA --date-font="Iosevka Extended" --date-size=25 --redraw-thread
+bindsym $mod+Ctrl+Shift+l exec --no-startup-id i3lock -k --ignore-empty-password -f -c 3e4f75 --insidever-color=6666FFAA --insidewrong-color=FF333322 --inside-color=333333EE --time-pos="ix:iy + 300" --time-color=FFFFFFDD --time-font="Iosevka Extended" --time-size=40 --date-str="%F" --date-color=FFFFFFAA --date-font="Iosevka Extended" --date-size=25 --redraw-thread
 
 bindsym $mod+d exec --no-startup-id alacritty -t 'fzf-menu' -e 'i3-dmenu-desktop --dmenu=fzf'
 for_window [title="fzf-menu"] floating enable
@@ -59,29 +59,66 @@ bindsym $mod+c focus child
 #workspace 9 output DP-2-2
 #workspace 10 output eDP-1
 
-# At home
-workspace 1 output DP-1
-workspace 2 output HDMI-2
-workspace 3 output HDMI-2
-workspace 4 output HDMI-2
-workspace 5 output HDMI-2
-workspace 6 output HDMI-2
-workspace 7 output HDMI-2
-workspace 8 output HDMI-2
-workspace 9 output HDMI-2
-workspace 10 output eDP-1
+# Single
+#workspace 1 output DP-2
+#workspace 2 output DP-2
+#workspace 3 output DP-2
+#workspace 4 output DP-2
+#workspace 5 output DP-2
+#workspace 6 output DP-2
+#workspace 7 output DP-2
+#workspace 8 output DP-2
+#workspace 9 output DP-2
+#workspace 10 output DP-2
 
-# At office
-#workspace 1 output eDP-1
-#workspace 2 output DP-2-2
-#workspace 3 output DP-2-3
-#workspace 4 output DP-2-2
-#workspace 5 output DP-2-2
-#workspace 6 output DP-2-2
-#workspace 7 output DP-2-2
-#workspace 8 output DP-2-2
-#workspace 9 output DP-2-2
-#workspace 10 output DP-2-2
+# At home
+#workspace 1 output HDMI-0
+#workspace 2 output DP-0
+#workspace 3 output DP-0
+#workspace 4 output DP-0
+#workspace 5 output DP-0
+#workspace 6 output DP-0
+#workspace 7 output DP-0
+#workspace 8 output DP-0
+#workspace 9 output DP-0
+#workspace 10 output DP-2
+
+# At office (MUC)
+workspace 1 output DP-2
+workspace 2 output DP-0.2
+workspace 3 output HDMI-0
+workspace 4 output HDMI-0
+workspace 5 output HDMI-0
+workspace 6 output HDMI-0
+workspace 7 output HDMI-0
+workspace 8 output HDMI-0
+workspace 9 output HDMI-0
+workspace 10 output HDMI-0
+
+# At office (MUC)
+#workspace 1 output DP-2
+#workspace 2 output HDMI-0
+#workspace 3 output HDMI-0
+#workspace 4 output HDMI-0
+#workspace 5 output HDMI-0
+#workspace 6 output HDMI-0
+#workspace 7 output HDMI-0
+#workspace 8 output HDMI-0
+#workspace 9 output HDMI-0
+#workspace 10 output HDMI-0
+
+
+# At office (KA)
+#workspace 1 output DP-2
+#workspace 2 output DP-0.2
+#workspace 3 output DP-0.2
+#workspace 4 output DP-0.2
+#workspace 5 output DP-0.2
+#workspace 6 output DP-0.2
+#workspace 7 output DP-0.2
+#workspace 8 output DP-0.2
+#workspace 9 output DP-0.2
+#workspace 10 output DP-0.2
 
 bindsym $mod+1 workspace 1
 bindsym $mod+2 workspace 2
@@ -219,7 +256,9 @@ for_window [window_role="pop-up"] floating enable
 
 # i3status-rs
 bar {
-    font pango:Terminus, FontAwesome 12
+    font pango: Terminus, Font Awesome 6 Free Solid 12
+    #font pango: TerminessTTF Nerd Font 12
+    #font pango: ProggyCleanTTSZ Nerd Font 12
     position bottom
     tray_output primary
     status_command i3status-rs
