--- a/.config/i3/config
+++ b/.config/i3/config
@@ -9,12 +9,13 @@ bindsym $mod+Return $exec wezterm
 #bindsym $mod+p exec dmenu_run -i -l 10 -h 18 -p "$" -fn "-*-terminus-medium-*-*-*-12-*-*-*-*-*-*-*" -x 690 -w 300 -nb "#080808" -nf "#808080" -sb "#080808" -sf "#ea8484"
 
 bindsym $mod+Shift+p exec clipmenu -i -l 10 -p "$" -fn "Iosevka Medium-13" -nb "#222" -nf "#808080" -sb "#222" -sf "#ea8484"
-bindsym $mod+p exec --no-startup-id keepmenu
+#bindsym $mod+Shift+p exec clipcat-menu
+#bindsym $mod+p exec --no-startup-id keepmenu
 bindsym $mod+space exec --no-startup-id "rofi -show combi -switchers combi -combi-modi 'window,run'"
 bindsym $mod+Shift+f exec wmfocus
 bindsym $mod+Shift+e exec --no-startup-id "rofi -show emoji -modi emoji"
 
-bindsym $mod+Ctrl+Shift+l exec --no-startup-id i3lock -k --ignore-empty-password -f -c 3e4f75 --insidever-color=6666FFAA --insidewrong-color=FF333322 --inside-color=333333EE --time-pos="ix:iy + 300" --time-color=FFFFFFDD --time-font="Iosevka Extended" --time-size=40 --date-str="%F" --date-color=FFFFFFAA --date-font="Iosevka Extended" --date-size=25 --redraw-thread
+bindsym $mod+Ctrl+Shift+l exec --no-startup-id i3lock -k --ignore-empty-password -f -c 1b1917 --insidever-color=6666FFAA --insidewrong-color=FF333322 --inside-color=333333EE --time-pos="ix:iy + 300" --time-color=FFFFFFDD --time-font="Iosevka Extended" --time-size=40 --date-str="%F" --date-color=FFFFFFAA --date-font="Iosevka Extended" --date-size=25 --redraw-thread
 
 bindsym $mod+d exec --no-startup-id alacritty -t 'fzf-menu' -e 'i3-dmenu-desktop --dmenu=fzf'
 for_window [title="fzf-menu"] floating enable
@@ -60,40 +61,40 @@ bindsym $mod+c focus child
 #workspace 10 output eDP-1
 
 # Single
-#workspace 1 output DP-2
-#workspace 2 output DP-2
-#workspace 3 output DP-2
-#workspace 4 output DP-2
-#workspace 5 output DP-2
-#workspace 6 output DP-2
-#workspace 7 output DP-2
-#workspace 8 output DP-2
-#workspace 9 output DP-2
-#workspace 10 output DP-2
+#workspace 1 output eDP-1
+#workspace 2 output eDP-1
+#workspace 3 output eDP-1
+#workspace 4 output eDP-1
+#workspace 5 output eDP-1
+#workspace 6 output eDP-1
+#workspace 7 output eDP-1
+#workspace 8 output eDP-1
+#workspace 9 output eDP-1
+#workspace 10 output eDP-1
 
 # At home
-#workspace 1 output HDMI-0
-#workspace 2 output DP-0
-#workspace 3 output DP-0
-#workspace 4 output DP-0
-#workspace 5 output DP-0
-#workspace 6 output DP-0
-#workspace 7 output DP-0
-#workspace 8 output DP-0
-#workspace 9 output DP-0
-#workspace 10 output DP-2
+#workspace 1 output HDMI-1
+#workspace 2 output DP-3
+#workspace 3 output DP-3
+#workspace 4 output DP-3
+#workspace 5 output DP-3
+#workspace 6 output DP-3
+#workspace 7 output DP-3
+#workspace 8 output DP-3
+#workspace 9 output DP-3
+#workspace 10 output eDP-1
 
 # At office (MUC)
-workspace 1 output DP-2
-workspace 2 output DP-0.2
-workspace 3 output HDMI-0
-workspace 4 output HDMI-0
-workspace 5 output HDMI-0
-workspace 6 output HDMI-0
-workspace 7 output HDMI-0
-workspace 8 output HDMI-0
-workspace 9 output HDMI-0
-workspace 10 output HDMI-0
+workspace 1 output HDMI-1
+workspace 2 output HDMI-1
+workspace 3 output HDMI-1
+workspace 4 output HDMI-1
+workspace 5 output HDMI-1
+workspace 6 output HDMI-1
+workspace 7 output HDMI-1
+workspace 8 output HDMI-1
+workspace 9 output HDMI-1
+workspace 10 output eDP-1
 
 # At office (MUC)
 #workspace 1 output DP-2
@@ -251,28 +252,25 @@ for_window [window_role="pop-up"] floating enable
 #	}
 #}
 
-# polybar
-#exec_always --no-startup-id $HOME/.config/polybar/launch-polybar.sh
-
+# bar
 # i3status-rs
 bar {
-    font pango: Terminus, Font Awesome 6 Free Solid 12
-    #font pango: TerminessTTF Nerd Font 12
-    #font pango: ProggyCleanTTSZ Nerd Font 12
-    position bottom
-    tray_output primary
-    status_command i3status-rs
-    colors {
-        separator #404040
-        background #080808
-        statusline #808080
-        #                  border  backgr  text
-        focused_workspace  #a6a6de #080808 #ffffff
-        active_workspace   #404040 #080808 #a6a6de
-        inactive_workspace #404040 #080808 #808080
-        urgent_workspace   #ea8484 #080808 #ffffff
-    }
+   font pango: Jetbrains Mono SemiBold, Font Awesome 6 Free Solid 12
+   position bottom
+   tray_output primary
+   status_command i3status-rs
+   colors {
+       separator #666666
+       background #080808
+       statusline #a0a0a0
+       #                  border  backgr  text
+       focused_workspace  #a6a6de #a6a6de #1a1a1a
+       active_workspace   #404040 #080808 #a6a6de
+       inactive_workspace #404040 #080808 #a0a0a0
+       urgent_workspace   #e60053 #e60053 #ffffff
+   }
 }
+#exec_always --no-startup-id $HOME/.config/polybar/launch-polybar.sh
 
 # class                 border  backgr  text    indicator
 client.focused          #a6a6de #a6a6de #000000 #a6a6de
